# coursework_1

./: .env_template  .flake8  .gitignore  config.py  main.py  pyproject.toml
src/: reports.py  services.py  utils.py  views.py
